--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,6 @@
     position: fixed;
     left: 0;
     top: 0;
-    height: 100vh;
     min-width: 180px;
     max-width: 70vw;
     width: 70vw;
@@ -52,10 +51,6 @@
   .hamburger {
     display: flex;
   }
-  .app-layout {
-    flex-direction: column;
-    width: 100vw;
-  }
   .app-content {
     margin: 0 auto;
     padding: 24px 6vw 24px 6vw;
@@ -64,13 +59,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
   }
 }
 
 /* Vertical left sidebar navigation */
 .main-nav {
-  height: 100vh;
   min-width: 220px;
   max-width: 220px;
   background: #202123;
@@ -118,20 +112,16 @@
 .app-layout {
   display: flex;
   flex-direction: row;
-  min-height: 100vh;
-  width: 100vw;
-  overflow-x: auto;
+  height: 100vh;
 }
 .app-content {
   flex: 1 1 0%;
   padding: 32px 24px 24px 24px;
   background: #f7f7f8;
-  min-height: 100vh;
   overflow-x: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 
 .App-header {
